force-app/main/default/objects/Patient__c/fields/Doctor_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Qualification__c</fullName>
    <formula>TEXT(Doctor_Assigned__r.Qualification__c)</formula>
    <label>Doctor Qualification</label>
    <type>Text</type>
</CustomField>