force-app/main/default/objects/Patient__c/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <label>Symptoms</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fever</fullName>
            </value>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Cough</fullName>
            </value>
            <value>
                <fullName>BodyPain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>